--- a/index.html
+++ b/index.html
@@ -797,12 +797,19 @@
             </div>
             <div>
                 <h3>Horário</h3>
-                <p>Segunda à Sexta: 9h às 18h</p>
-                <p>Sábados: 9h às 14h</p>
+                <p>Segunda à Sexta: 10h às 18h</p>
+                <p>Sábados: 9h às 18h</p>
+                <p>Domingos e Feriados: Fechado</p>
+
+ <p>Fez Um Pedido No Domingo?</p>
+                <p>Responderemos No proximo Dia Util</p>
+                
             </div>
         </div>
         <div style="border-top: 1px solid var(--border); padding-top: 1.5rem; margin-top: 2rem;">
             <p>&copy; 2024 Tesori di Latte. Todos os direitos reservados.</p>
+            <p>SITE EM FASE DE DESENVOLVIMENTO FINAL</p>
+            <p>SE VOCÊ PAROU AQUI SEM QUERER SAIA POR GENTILEZA</p>
         </div>
     </footer>
 
@@ -924,7 +931,7 @@
             message += `*Total: R$ ${total.toFixed(2).replace('.', ',')}*\n\n`;
             message += 'Gostaria de finalizar este pedido!';
             
-            const whatsappUrl = `https://wa.me/5511947232463?text=${encodeURIComponent(message)}`;
+            const whatsappUrl = `https://wa.me/5511913325424?text=${encodeURIComponent(message)}`;
             window.open(whatsappUrl, '_blank');
         }
 
