--- a/index.html
+++ b/index.html
@@ -800,8 +800,8 @@
                 <p>Segunda à Sexta: 10h às 18h</p>
                 <p>Sábados: 9h às 18h</p>
                 <p>Domingos e Feriados: Fechado</p>
-
- <p>Fez Um Pedido No Domingo?</p>
+<p> </p>
+ <p>Fez Um Pedido No Domingo ou Feriado?</p>
                 <p>Responderemos No proximo Dia Util</p>
                 
             </div>
