--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tesori di latte - Queijos Artesanais Premium</title>
+ <link rel="icon" href="favicon.ico" />
     <style>
         :root {
             --bg: #0f0f0f;
