--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tesori di latte - Queijos Artesanais Premium</title>
- <link rel="icon" href="favicon.ico" />
+<link rel="icon" type="image/png" href="https://i.imgur.com/odfvDQH.png" />
+
     <style>
         :root {
             --bg: #0f0f0f;
