--- a/index.html
+++ b/index.html
@@ -675,8 +675,8 @@
     <div class="floating-cheese" style="top: 80%; right: 10%;">🧀</div>
 
     <header>
-        <div class="header-content">
-            <div class="logo">Tesori Di Latte</div>
+        <div class="logo">
+            <span class="logo-icon">/favicon.ico</span>Tesori Di Latte</div>
             <nav>
                 <ul>
                     <li><a href="#home">Início</a></li>
