--- a/index.html
+++ b/index.html
@@ -674,9 +674,10 @@
     <div class="floating-cheese" style="top: 60%; left: 5%;">🧀</div>
     <div class="floating-cheese" style="top: 80%; right: 10%;">🧀</div>
 
+    
     <header>
-        <div class="logo">
-            <span class="logo-icon">/favicon.ico</span>Tesori Di Latte</div>
+        <div class="header-content">
+            <div <span class="logo">Tesori Di Latte</div>
             <nav>
                 <ul>
                     <li><a href="#home">Início</a></li>
