--- a/index.html
+++ b/index.html
@@ -676,8 +676,7 @@
 
     
     <header>
-        <div class="header-content">
-            <div <span class="logo">Tesori Di Latte</div>
+        <div class="header-with-icon"> <div class="app-icon"> <img src="seu-logo.png" alt="Tesori Di Latte"> </div> <h1>Tesori Di Latte</h1> </div>
             <nav>
                 <ul>
                     <li><a href="#home">Início</a></li>
