--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="icon" type="image/png" href="https://i.imgur.com/odfvDQH.png" />
 
     <style>
+     .header-with-icon { display: flex; align-items: center; justify-content: center; gap: 15px; padding: 20px; } .app-icon { width: 60px; height: 60px; border-radius: 50%; overflow: hidden; border: 3px solid #d4af37; box-shadow: 0 4px 20px rgba(212, 175, 55, 0.4); } .app-icon img { width: 100%; height: 100%; object-fit: cover; }
         :root {
             --bg: #0f0f0f;
             --bg-alt: #1c1c1c;
