--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
 /* Ícone menor */
 .app-icon { 
-    width: 45px;         /* Reduzido de 60px para 45px */
-    height: 45px;        /* Reduzido de 60px para 45px */
+    width: 55px;         /* Reduzido de 60px para 45px */
+    height: 55px;        /* Reduzido de 60px para 45px */
     border-radius: 50%; 
     overflow: hidden; 
-    border: 2px solid #d4af37;  /* Reduzido de 3px para 2px */
+    border: 2px solid #ffd691;  /* Reduzido de 3px para 2px */
     box-shadow: 0 2px 12px rgba(212, 175, 55, 0.4);  /* Sombra menor */
 }
 
@@ -36,7 +36,7 @@
 .header-with-icon h1 {
     font-size: 1.5rem;   /* Tamanho reduzido do título */
     margin: 0;
-    color: #d4af37;
+    color: #ffffff;
 }
 
 /* Versão ainda mais compacta (opcional) */
@@ -48,7 +48,7 @@
 .header-with-icon.extra-compact .app-icon { 
     width: 35px;
     height: 35px;
-    border: 1px solid #d4af37;
+    border: 1px solid #ffd691;
     box-shadow: 0 1px 8px rgba(212, 175, 55, 0.3);
 }
 
@@ -884,7 +884,7 @@
             </div>
         </div>
         <div style="border-top: 1px solid var(--border); padding-top: 1.5rem; margin-top: 2rem;">
-            <p>&copy; 2024 Tesori di Latte. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Tesori di Latte. Todos os direitos reservados.</p>
             <p>SITE EM FASE DE DESENVOLVIMENTO FINAL</p>
             <p>SE VOCÊ PAROU AQUI SEM QUERER SAIA POR GENTILEZA</p>
         </div>
