--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tesori di latte - Queijos Artesanais Premium</title>
-<link rel="icon" type="image/png" href="https://i.imgur.com/odfvDQH.png" />
+<link rel="icon" type="image/png" href="https://iplogger.com/23U7A5" />
 
     <style>
 /* Header mais compacto - reduzindo tamanhos */
